Fix Controls overlapping Footer

--- a/assets/main.css
+++ b/assets/main.css
@@ -297,7 +297,6 @@ textarea[readonly] {}
     width: 300px;
     padding: 10px;
     background: rgba(21.5, 21.5, 21.5, 0.8);
-    z-index: 10;
 }
 
 input {
